--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "gh-pages": "^2.2.0",
+    "leaflet": "^1.7.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-leaflet": "^2.7.0",
     "react-scripts": "3.4.1"
   },
-  "homepage": "https://phondani0.github.io/corona_dashboard",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
